Basic design for project, language and skill sections, less gap between divs

--- a/src/templates/languages.html
+++ b/src/templates/languages.html
@@ -1,1 +1,26 @@
-languages
+<div class="row">
+  <div class="col-sm-12 col-lg-6">
+    <div class="media language">
+      <div class="media-left media-middle padding-left">
+        <img class="media-object logo" src="./assets/images/logos/html.svg" alt="HTML">
+      </div>
+      <div class="media-body">
+        <h4>HTML</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ex neque laudantium fugit, nemo quo magnam eaque sunt, expedita asperiores sapiente veritatis enim aliquid, vero corporis. Animi, tenetur dolorem eaque.</p>
+        <p><a href="#" class="btn btn-success" role="button">Learn</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12 col-lg-6">
+    <div class="media language">
+      <div class="media-left media-middle padding-left">
+        <img class="media-object logo" src="./assets/images/logos/js.svg" alt="Javascript">
+      </div>
+      <div class="media-body">
+        <h4>Javascript</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ex neque laudantium fugit, nemo quo magnam eaque sunt, expedita asperiores sapiente veritatis enim aliquid, vero corporis. Animi, tenetur dolorem eaque.</p>
+        <p><a href="#" class="btn btn-success disabled" role="button">Learn</a></p>
+      </div>
+    </div>
+  </div>
+</div>
