--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -1,1 +1,13 @@
-projects
+<div class="row">
+  <div class="col-sm-12">
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+      </div>
+      <span class="text-left margin-left absolute">45% Complete</span>
+      <div class="absolute block-right float-right margin-right">
+        <span class="glyphicon glyphicon-time"></span>
+        <span class="time">00:00:15</span>
+      </div>
+    </div>
+  </div>
+</div>
