--- a/src/templates/skills.html
+++ b/src/templates/skills.html
@@ -1,1 +1,18 @@
-skills
+<div class="row">
+  <div class="col-sm-12">
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
+      <span class="text-left margin-left absolute">HTML</span>
+      <div class="absolute block-right float-right margin-right">45%</div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
+      <span class="text-left margin-left absolute">Javascript</span>
+      <div class="absolute block-right float-right margin-right">45%</div>
+    </div>
+  </div>
+</div>
