--- a/src/templates/languages.html
+++ b/src/templates/languages.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-12 col-lg-6">
+  <div class="col-sm-12 col-lg-6 half-margin-bottom">
     <div class="media language">
       <div class="media-left media-middle padding-left">
         <img class="media-object logo" src="./assets/images/logos/html.svg" alt="HTML">
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-12 col-lg-6">
+  <div class="col-sm-12 col-lg-6 half-margin-bottom">
     <div class="media language">
       <div class="media-left media-middle padding-left">
         <img class="media-object logo" src="./assets/images/logos/js.svg" alt="Javascript">
