--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row half-margin-bottom">
   <div class="col-sm-12">
     <div class="progress">
       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
