Added ngStorage, Language class, rendering languages

--- a/templates/languages.html
+++ b/templates/languages.html
@@ -1,25 +1,13 @@
-<div class="row">
-  <div class="col-sm-12 col-lg-6 half-margin-bottom">
+<div class="row" ng-controller="LanguageCtrl">
+  <div class="col-sm-12 col-lg-6 half-margin-bottom" ng-repeat="language in languages">
     <div class="media language">
       <div class="media-left media-middle padding-left">
-        <img class="media-object logo" src="./assets/images/logos/html.svg" alt="HTML">
+        <img class="media-object logo" ng-src="./assets/images/logos/{{language.logo}}" alt="{{language.name}}">
       </div>
       <div class="media-body">
-        <h4>HTML</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ex neque laudantium fugit, nemo quo magnam eaque sunt, expedita asperiores sapiente veritatis enim aliquid, vero corporis. Animi, tenetur dolorem eaque.</p>
+        <h4>{{language.name}}</h4>
+        <p>{{language.description}}</p>
         <p><a href="#" class="btn btn-success" role="button">Learn</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-12 col-lg-6 half-margin-bottom">
-    <div class="media language">
-      <div class="media-left media-middle padding-left">
-        <img class="media-object logo" src="./assets/images/logos/js.svg" alt="Javascript">
-      </div>
-      <div class="media-body">
-        <h4>Javascript</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ex neque laudantium fugit, nemo quo magnam eaque sunt, expedita asperiores sapiente veritatis enim aliquid, vero corporis. Animi, tenetur dolorem eaque.</p>
-        <p><a href="#" class="btn btn-success disabled" role="button">Learn</a></p>
       </div>
     </div>
   </div>
